name:                HomePage
version:             0.1.0.0
synopsis:            application for my webpage
description:         using servant and eventsourcing to drive my homepage including a simple markdown-blog
homepage:            https://carsten-koenig.net
license:             BSD3
license-file:        LICENSE
author:              Casten König
maintainer:          Carsten.Koenig@hotmail.de
copyright:           2017 Carsten König
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Application
                     , EventSourcing.Events
                     , EventSourcing.Projections
                     , Views.AboutMe
                     , Views.Index
                     , Views.Layout
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , data-default
                     , lucid
                     , servant-lucid
                     , servant-server
                     , text
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010

executable HomePage-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HomePage
  default-language:    Haskell2010

test-suite HomePage-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HomePage
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carstenkoenig/HomePage
