name:                HomePage
version:             0.1.0.0
synopsis:            application for my webpage
description:         using servant and eventsourcing to drive my homepage including a simple markdown-blog
homepage:            https://carsten-koenig.net
license:             BSD3
license-file:        LICENSE
author:              Casten König
maintainer:          Carsten.Koenig@hotmail.de
copyright:           2017 Carsten König
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Application
                     , Application.Auth
                     , Application.Context
                     , Application.Handler
                     , Application.HandlerMonad
                     , Application.Routing
                     , Application.Session
                     , Database
                     , Database.EventSourcing
                     , Database.Model
                     , EventSourcing
                     , EventSourcing.Events
                     , EventSourcing.EventStore
                     , EventSourcing.Projections
                     , Models.Blog
                     , Models.Blog.Post
                     , Models.Blog.Types
                     , Models.Events
                     , Utils.Passwords
                     , Views.AboutMe
                     , Views.Index
                     , Views.Layout
                     , Views.LoginModal
                     , Views.Page
                     , Views.ShowBlogPost
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , cereal
                     , containers
                     , cryptonite
                     , data-default
                     , directory
                     , exceptions
                     , free
                     , http-api-data
                     , lucid
                     , markdown >= 0.1.14
                     , memory
                     , monad-logger
                     , mtl
                     , network-uri
                     , persistent
                     , persistent-template
                     , resourcet
                     , resource-pool
                     , servant-auth-cookie
                     , servant-lucid
                     , servant-server
                     , skylighting >= 0.1.1.5
                     , text
                     , time
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

executable HomePage-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HomePage
                     , aeson
                     , cryptonite
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , resourcet
                     , text
                     , servant-auth-cookie
  default-language:    Haskell2010

test-suite HomePage-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HomePage
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , cryptonite
                     , servant-auth-cookie
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carstenkoenig/HomePage
